# sailfish

sailfish/: Cargo.toml
sailfish-compiler/: Cargo.toml
sailfish-macros/: Cargo.toml
sailfish-tests/fuzzing-tests/: Cargo.toml
sailfish-tests/integration-tests/: Cargo.toml
